apps/lazyaiden-cli/tests/snapshots/e2e__device_list_selected.snap
---
source: apps/lazyaiden-cli/tests/e2e.rs
expression: "h.ok(&[\"device\", \"list\"]).await"
---
   ID  NAME
   b1  Kitchen
*  b2  Office
