apps/lazyaiden-cli/tests/snapshots/e2e__pull_all.snap
---
source: apps/lazyaiden-cli/tests/e2e.rs
expression: "h.ok(&[\"profile\", \"pull\", \"--all\"]).await"
---
unchanged  morning-v60 <- p1
created    elsewhere <- p2
