apps/lazyaiden-cli/tests/snapshots/e2e__push_created.snap
---
source: apps/lazyaiden-cli/tests/e2e.rs
expression: "h.ok(&[\"profile\", \"push\", \"morning-v60\"]).await"
---
created    morning-v60 -> p1
