apps/lazyaiden-cli/tests/snapshots/e2e__push_unchanged.snap
---
source: apps/lazyaiden-cli/tests/e2e.rs
expression: "h.ok(&[\"profile\", \"push\", \"--all\"]).await"
---
unchanged  morning-v60 -> p1
