apps/lazyaiden-cli/tests/snapshots/e2e__schedule_list.snap
---
source: apps/lazyaiden-cli/tests/e2e.rs
expression: "h.ok(&[\"schedule\", \"list\"]).await"
---
ID  ON   DAYS      TIME   WATER   PROFILE
s2  yes  weekdays  07:30  500 ml  Morning V60 (p1)
s3  no   weekends  09:15  750 ml  Morning V60 (p1)
