apps/lazyaiden-cli/tests/snapshots/e2e__status_in_sync.snap
---
source: apps/lazyaiden-cli/tests/e2e.rs
expression: "h.ok(&[\"profile\", \"list\"]).await"
---
NAME         TITLE        STATE    REMOTE
morning-v60  Morning V60  in-sync  p1
