apps/lazyaiden-cli/tests/snapshots/e2e__status_json.snap
---
source: apps/lazyaiden-cli/tests/e2e.rs
expression: "json(&h.ok(&[\"--json\", \"profile\", \"list\"]).await)"
---
{
  "problems": [],
  "profiles": [
    {
      "name": "morning-v60",
      "remoteId": "p1",
      "state": "in-sync",
      "title": "Morning V60"
    }
  ]
}
