apps/lazyaiden-cli/tests/snapshots/e2e__status_local_only.snap
---
source: apps/lazyaiden-cli/tests/e2e.rs
expression: "h.ok(&[\"profile\", \"list\"]).await"
---
NAME         TITLE        STATE       REMOTE
morning-v60  Morning V60  local-only  -
